[package]
name = "panta"
version = "0.1.0"
edition = "2021"

[dependencies]
assert_approx_eq = "1"
fnv = "1"
float-ord = "0.3"
itertools = "0.10"
lazy_static = "1.4.0"

chrono = "0.4"
fern = "0.6"
log = "0.4"

libc = "0.2"

serde = { version = "1", features=["derive"] }
serde_json = { version = "1" }
serde_yaml = { version = "0.9" }

tokio = { version = "1", features=["full"] }
reqwest = { version = "0.11", features=["json"] }