[package]
name = "panta"
version = "0.1.0"
edition = "2021"
authors = ["Anton Jansson <anton_jansson@live.se>"]
description = "panta - system analysis tool"
license = "MIT"
homepage = "https://github.com/svenslaggare/panta"

[dependencies]
assert_approx_eq = "1"
fnv = "1"
float-ord = "0.3"
itertools = "0.10"
lazy_static = "1.4.0"

log = { version = "0.4", features=["serde"] }
fern = "0.6"
chrono = "0.4"

libc = "0.2"

structopt = "0.3"

serde = { version = "1", features=["derive"] }
serde_json = { version = "1" }
serde_yaml = { version = "0.9" }

tokio = { version = "1", features=["full"] }
reqwest = { version = "0.11", features=["json"] }
tokio-postgres = "0.7"

bollard = "0.14"